Updating backend to set the System Date of the DB
